src/test/ui/attributes/key-value-non-ascii.ds
#![feature(dustc_attrs)]

#[dustc_dummy = b"ﬃ.rs"] //~ ERROR non-ASCII character in byte constant
fn main() {}
